k8s/mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-ooo
  labels:
    name: test
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: mqtt
      student: ooo
  template:
    metadata:
      labels:
        component: mqtt
        student: ooo
    spec:
      containers:
        - name: mqtt
          image: bsdfuyih2gh/iot-home-mqtt:3.0.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
