k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-ooo
  labels:
    name: test
spec:
  type: ClusterIP
  selector:
    component: server
    student: ooo
  ports:
    - port: 3000
      targetPort: 3000
